# Leaf

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: interpreter.rs  main.rs  progress.rs
cli/src/interpreter/: instruction_cache.rs  interpreter.rs  memory.rs  mod.rs  stubs.rs  value.rs
compilation/: Cargo.toml
compilation/src/: lib.rs
compilation/src/backends/: llvm.rs  mod.rs  x86_64.rs
compilation/src/frontend/: block.rs  compilation_unit.rs  expressions.rs  functions.rs  intrinsics.rs  mod.rs  reports.rs  symbols.rs  type_resolver.rs  types.rs
compilation/src/frontend/compilation_context/: callbacks.rs  config.rs  context.rs  mod.rs  unit.rs
compilation/src/utilities/: mod.rs  name_mangling.rs
derive/: Cargo.toml
derive/src/: lib.rs  metadata.rs  metadata_read.rs  metadata_write.rs  oparators.rs  utils.rs  write.rs
parsing/: Cargo.toml
parsing/src/: ast.rs  lexer.rs  lib.rs  parser.lalrpop  parser.rs
reflection/: Cargo.toml
reflection/src/: lib.rs  read_write.rs  serialization.rs  utilities.rs
reflection/src/builders/: blob_heap_builder.rs  metadata_builder.rs  mod.rs  string_heap_builder.rs  type_signature_builder.rs
reflection/src/heaps/: blob_heap.rs  general_purpose_heap.rs  mod.rs  string_heap.rs  type_heap.rs
reflection/src/metadata/: assembly.rs  functions.rs  mod.rs  opcodes.rs  read_write.rs  refs.rs  ssa.rs  types.rs
reflection/src/metadata/builders/: blob_heap_builder.rs  metadata_builder.rs  string_heap_builder.rs  type_signature_builder.rs
reflection/src/metadata/ssa/: builder.rs  final.rs  mod.rs
reflection/src/structured/: assembly.rs  functions.rs  mod.rs  types.rs
reflection_new/: Cargo.toml
reflection_new/src/: lib.rs  read_write.rs
reflection_new/src/heaps/: blob_heap.rs  mod.rs  string_heap.rs
reflection_new/src/metadata/: assembly.rs  functions.rs  mod.rs  ssa.rs  types.rs
reflection_v2/: Cargo.toml
reflection_v2/src/: lib.rs  main.rs  serialization.rs
reflection_v2/src/heaps/: const_heap.rs  mod.rs  type_heap.rs
reflection_v2/src/metadata/: mod.rs  types.rs  unique_identifier.rs
