[workspace]
members = [
    "cli",
    "derive",
    "parsing",
    "reflection",
    "compilation",
    "interpreter",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release_with_debug_symbols]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
panic = "abort"
strip = true
lto = true
