[workspace]
members = [
    "cli",
    "derive",
    "parsing",
    "reflection",
    "compilation",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = "z"
debug = "limited"

[profile.release_with_debug_symbols]
inherits = "release"
debug = true

[profile.lto]
inherits = "release"
panic = "abort"
strip = true
lto = true
