[package]
name = "leaf_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.3.1"
anyhow = "1.0.79"
bytemuck = "1.14.3"
leaf_compilation = { path = "../compilation" }
clap = { version = "4.4.18", features = ["derive"] }
