[package]
name = "leaf_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.3.1"
anyhow = "1.0.79"
bytemuck = "1.14.3"
paste = "1.0.14"
nohash-hasher = "0.2.0"
clap = { version = "4.4.18", features = ["derive"] }
leaf_compilation = { path = "../compilation", features = ["backend-x86_64"] }

tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[features]
miri_compile = []
miri_interpret = []
