[package]
name = "leaf_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0.23"
darling = "0.20.8"
proc-macro2 = "1.0.80"

[lib]
proc-macro = true

[features]
metadata = []
operators = []