[package]
name = "leaf_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unescape = "0.1.0"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.0"