[package]
name = "leaf_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
winnow = { version = "0.6.6" }
ariadne = "0.4.0"
unescape = "0.1.0"
derive_more = { version = "1.0.0-beta.6", features = ["display"] }

[features]
debug_parser = [
    "winnow/debug"
]
