[package]
name = "leaf_reflection"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.15.4"
derivative = "2.2.0"
bitflags = "2.5.0"
num-traits = "0.2.18"
leaf_derive = { path = "../derive", optional = true }
bytemuck = { version = "1.15.0", optional = true }

[features]
build = []
read = ["dep:bytemuck", "dep:leaf_derive"]
write = ["dep:bytemuck", "dep:leaf_derive"]
