[package]
name = "leaf_reflection"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.15.4"
derivative = "2.2.0"
bitflags = "2.5.0"
fxhash = "0.2.1"
nohash-hasher = "0.2.0"
parking_lot = "0.12"
leaf_derive = { path = "../derive", features = ["metadata"] }
bytemuck = { version = "1.15.0", optional = true }
tracing = "0.1.40"

[features]
build = []
write = ["dep:bytemuck"]
read = ["dep:bytemuck", "build"]
