[package]
name = "reflection_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.15.4"
derivative = "2.2.0"
bytemuck = { version = "1.15.0", optional = true }

[features]
build = []
read = ["dep:bytemuck"]
write = ["dep:bytemuck"]
